# adev

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  SKILL.md
.github/workflows/: release.yml
scripts/: install-skill.sh  prepare_release.py
src/: cli.rs  commands.rs  main.rs  ui.rs
